# simple_ltm

./: .gitignore  CLAUDE.md  README.md  example.py  pyproject.toml
simple_ltm/: __init__.py  __main__.py  agent.py  app.py  memory.py  meta_prompts.py  prompts.py
src/simple_ltm/: __init__.py  __main__.py  agent.py  api.py  app.py  cli.py  memory.py  prompts.py
tests/: __init__.py  test_chainlit.py  test_e2e.py
