[tool.poetry]
name = "simple-ltm"
version = "0.1.0"
description = "A string-based long-term memory implementation using LangGraph"
authors = ["Your Name"]
readme = "README.md"
packages = [{include = "simple_ltm", from = "src"}]

[tool.poetry.scripts]
ltm = "simple_ltm.cli:main"
ltm-api = "simple_ltm.api:main"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.26"
langgraph = "^0.5.2"
langchain-openai = "^0.3.27"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
rich = "^14.0.0"
langchain-anthropic = "^0.3.17"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
