[tool.poetry]
name = "simple-ltm"
version = "0.1.0"
description = "A string-based long-term memory implementation using LangGraph"
authors = ["Eddie Landesberg"]
readme = "README.md"
packages = [{include = "simple_ltm"}]

[tool.poetry.scripts]
ltm-info = "simple_ltm.app:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
langchain = "^0.3.26"
langgraph = "^0.5.2"
langchain-anthropic = "^0.3.17"
chainlit = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
